--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,7 @@ main ul {
     main h2 {
         margin: 2.1rem auto 1.4rem;
         font-size: 1.9rem;
+        letter-spacing: 0.1em;
         line-height: 1;
         color: var(--c2);
     }
