--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,7 @@ main ul {
 
     main h1 {
         margin: 10rem auto 0;
+        padding: 0 .2rem;
         font-size: 3.2rem;
         line-height: 1;
         text-align: center;
