--- a/_includes/components/search_header.html
+++ b/_includes/components/search_header.html
@@ -2,8 +2,11 @@
 
 <div class="search" role="search">
   <div class="search-input-wrap">
-    <input type="text" id="search-input" class="search-input" tabindex="0" placeholder="{{ search_placeholder | strip_html | strip }}" aria-label="{{ search_placeholder | strip_html| strip }}" autocomplete="off">
-    <label for="search-input" class="search-label"><svg viewBox="0 0 24 24" class="search-icon"><use xlink:href="#svg-search"></use></svg></label>
+    <input type="text" id="search-input" class="search-input" tabindex="0" placeholder="Search design﹢code"
+      aria-label="Search design﹢code" autocomplete="off">
+    <label width="24" height="24" for="search-input" class="search-label">
+      <span class="icon icon-search"></span>
+    </label>
   </div>
   <div id="search-results" class="search-results"></div>
 </div>
