--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -1,6 +1,3 @@
----
-comments: false
----
 <!DOCTYPE html>
 <html lang="{{ site.locale | default: 'en_US' }}">
 {%- include components/head.html -%}
@@ -40,7 +37,7 @@ comments: false
             <hr>
         </div>
         {{ content }}
-        {% if site.comments %}
+        {% if page.comments %}
             {%- include components/comments.html -%}
         {% endif %}
     </main>
