--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,7 +141,6 @@ main ul {
         --c7: #FFFFF8;
         --c8: #FF9B67;
         --c9: #FFDEA3;
-
         --r0: #005F9E;
         --r1: #2F6F91;
         --r2: #333333;
@@ -158,7 +157,6 @@ main ul {
         --rd: #D4E6A5;
         --re: #DFF3C6;
         --rf: #F6FAEB;
-        --rw: #FFFFFF;
 
     }
 
@@ -822,6 +820,11 @@ main ul {
 
     .search-active .search-results {
         display: block;
+        min-width: 100dvw;
+        margin-top: 1rem;
+        margin-left: 1rem;
+        border-radius: 4vh;
+        background-color: var(--c7);
     }
 
     .search-active .search-overlay {
@@ -1181,7 +1184,7 @@ pre.highlight {
 }
 
 .highlight .err {
-    color: var(--rw);
+    color: var(--c7);
     background-color: var(--rc)
 }
 
