--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -59,6 +59,9 @@
     }
     </script>
     <script src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
+<!--
     <script src="{{ '/assets/js/just-the-docs.js' | relative_url }}"></script>
+-->
+    <script src="{{ '/assets/js/jtd.js' | relative_url }}" async></script>
     <script src="{{ '/assets/js/script.js' | relative_url }}" async></script>
 </head>
