--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,12 +124,13 @@ main ol {
 main ul {
     list-style-type: square;
     list-style-position: outside;
+    margin-left: 4ch;
     padding-left: 4ch;
     color:var(--c6f);
 }
 
 main ul::marker {
-    color: var(--cd);
+    color: var(--cd)!important;
 }
 
 
