--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,9 @@ main ul li {
     color: var(--c1);
 }
 
+main ol li {
+    padding-left: 4ch;
+}
 
 @media screen {
 
@@ -199,6 +202,10 @@ main ul li {
 
     h2::before {
         display: none;
+    }
+
+    h2 {
+        padding-left: 4ch;
     }
 
 
@@ -832,6 +839,10 @@ main ul li {
 
         h2::before {
             display: inline-block;
+        }
+
+        h2 {
+            padding-left: none;
         }
 
 
