--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -16,7 +16,7 @@
             </div>
         </a>
     </header>
-    <label for="menu" aria-label="Toggle Menu">
+    <label for="menu" aria-label="Toggle Menu" id="menu-label">
         <div class="border" aria-hidden="true"></div>
         <div class="icon icon-menu" aria-hidden="true"></div>
     </label>
