--- a/_includes/components/aux_nav.html
+++ b/_includes/components/aux_nav.html
@@ -1,11 +1,6 @@
-{% if site.aux_links %}
+{% if site.links %}
 <div class="aside-title">Links</div>
-{% for link in site.aux_links %}
-  <a href="{{ link.last }}" 
-      class="aside-link"
-      {% if site.aux_links_new_tab %}
-      target="_blank" rel="noopener noreferrer"
-      {% endif %}
-  >{{ link.first }}</a>
+{% for link in site.links %}
+<a href="{{ link.last }}" class="aside-link" rel="noopener noreferrer">{{ link.first }}</a>
 {% endfor %}
 {% endif %}
