--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -23,7 +23,7 @@
     <link href="https://{{ site.config_domain }}" rel="preconnect">
     <link href="https://translate.google.com" rel="preconnect">
     <link href="https://translate.googleapis.com" rel="preconnect">
-    <link href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/images/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="https://{{ site.base.url }}/{{ site.base.folder }}/assets/images/favicon.ico" rel="icon" type="image/x-icon">
     <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/JetBrainsMono-Medium.woff2" type="font/woff2" as="font">
     <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/Mediaan-Regular.woff2" type="font/woff2" as="font">
     <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/VisueltPro-Regular.woff2" type="font/woff2" as="font">
