--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -1,3 +1,8 @@
+{% assign domain = "https://" | append: site.base.url %}
+{% assign folder = domain | append: site.base.url | append: "/" | append: site.base.folder %}
+{% assign asset = folder | append: "/assets" %}
+{% assign image = asset | append: "/images" %}
+{% assign icon = image | append: "/favicon.ico" %}
 <!DOCTYPE html>
 <html lang="{{ site.locale | default: 'en_US' }}">
 {%- include components/head.html -%}
