--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -1,3 +1,5 @@
+
+
 <head>
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -14,16 +16,16 @@
     <meta property="og:title" content="{%- include components/title.html -%}">
     <meta property="og:locale" content="{{ site.locale | default: en_US' }}">
     <meta property="og:description" content="{%- include components/title.html -%}">
-    <meta property="og:url" content="https://{{ site.config_domain }}/{{ site.config_folder }}{{ page.url }}">
+    <meta property="og:url" content="{{ folder }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title }}">
     <meta property="og:type" content="website">
     <meta property="twitter:title" content="{%- include components/title.html -%}">
     <title>{%- include components/title.html -%}</title>
-    <link href="https://{{ site.config_domain }}" rel="dns-prefetch" crossorigin>
-    <link href="https://{{ site.config_domain }}" rel="preconnect">
+    <link href="{{ domain }}" rel="dns-prefetch" crossorigin>
+    <link href="{{ domain }}" rel="preconnect">
     <link href="https://translate.google.com" rel="preconnect">
     <link href="https://translate.googleapis.com" rel="preconnect">
-    <link href="https://{{ site.base.url }}/{{ site.base.folder }}/assets/images/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="{{ icon }}" rel="icon" type="image/x-icon">
     <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/JetBrainsMono-Medium.woff2" type="font/woff2" as="font">
     <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/Mediaan-Regular.woff2" type="font/woff2" as="font">
     <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/VisueltPro-Regular.woff2" type="font/woff2" as="font">
