--- a/_includes/components/head.html
+++ b/_includes/components/head.html
@@ -21,23 +21,16 @@
     <title>{%- include components/title.html -%}</title>
     <link href="{{ domain }}" rel="dns-prefetch" crossorigin>
     <link href="{{ domain }}" rel="preconnect">
-    <link href="https://translate.google.com" rel="preconnect">
-    <link href="https://translate.googleapis.com" rel="preconnect">
-    <link href="{{ icon }}" rel="icon" type="image/x-icon">
-    <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/JetBrainsMono-Medium.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/Mediaan-Regular.woff2" type="font/woff2" as="font">
-    <link rel="preload" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/fonts/VisueltPro-Regular.woff2" type="font/woff2" as="font">
-    <link rel="preload" as="style" type="text/css" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/css/style.css" onload="this.rel='stylesheet'">
-    <link rel="preload" as="script" href="https://{{ site.config_domain }}/{{ site.config_folder }}/assets/js/script.js">
-
-
-    <link rel="preload" as="script" href="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}">
-
-<!--
-    <link rel="preload" as="script" href="{{ '/assets/js/just-the-docs.js' | relative_url }}">
--->
-    <link rel="icon" href="{{ site.favicon_ico | relative_url }}" type="image/x-icon">
-    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
+    <link rel="icon"    href="{{ icon }}" type="image/x-icon">
+    <link rel="preload" as="style"  href="{{css}}/style.css" type="text/css" onload="this.rel='stylesheet'">
+    <link rel="preload" as="font"   href="{{font}}/JetBrainsMono-Medium.woff2" type="font/woff2" >
+    <link rel="preload" as="font"   href="{{font}}/Mediaan-Regular.woff2"      type="font/woff2" >
+    <link rel="preload" as="font"   href="{{font}}/VisueltPro-Regular.woff2"   type="font/woff2" >
+    <link rel="preload" as="script" href="{{js}}/script.js">
+    <link rel="preload" as="script" href="{{vendor}}/lunr.min.js">
+    <link rel="preconnect" href="https://translate.google.com" >
+    <link rel="preconnect" href="https://translate.googleapis.com" >
+    <link rel="canonical"  href="{{ folder }}{{ page.url }}">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
@@ -53,17 +46,14 @@
             "@type": "Organization",
             "logo": {
                 "@type": "ImageObject",
-                "url": "{{ site.url }}{{ site.logo }}"
+                "url": "{{ icon }}"
             },
             "name": "{{ site.meta.author }}"
         },
-        "url": "{{ site.url }}{{ page.url }}"
+        "url": "{{ folder }}{{ page.url }}"
     }
     </script>
-    <script src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}"></script>
-<!--
-    <script src="{{ '/assets/js/just-the-docs.js' | relative_url }}"></script>
--->
-    <script src="{{ '/assets/js/jtd.js' | relative_url }}" async></script>
-    <script src="{{ '/assets/js/script.js' | relative_url }}" async></script>
+    <script src="{{ '/assets/js/vendor/lunr.min.js' | relative_url }}" async></script>
+    <script src="{{js}}/jtd.js" async></script>
+    <script src="{{js}}/script.js" async></script>
 </head>
