--- a/_layouts/codecraft.html
+++ b/_layouts/codecraft.html
@@ -3,6 +3,10 @@
 {% assign folder = domain | append: "/" | append: site.base.folder %}
 {% assign asset = folder | append: "/assets" %}
 {% assign image = asset | append: "/images" %}
+{% assign font = asset | append: "/fonts" %}
+{% assign css = asset | append: "/css" %}
+{% assign js = asset | append: "/js" %}
+{% assign vendor = js | append: "/vendor" %}
 {% assign icon = image | append: "/favicon.ico" %}
 {% endcapture %}<!DOCTYPE html>
 <html lang="{{ site.locale | default: 'en_US' }}">
